--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
         .hoja:nth-child(4) { left: 40%; animation-duration: 8s; }
         .hoja:nth-child(5) { left: 50%; animation-duration: 5.5s; }
 
+        .flores-eternas h2 {
+            text-align: center;
+            font-size: 2.5em;
+            background-color: #f8d3d3;
+            padding: 10px 20px;
+            border-radius: 10px;
+            color: #3d3d3d;
+            margin-top: 20px;
+        }
+
         .contenedor-flores {
             display: flex;
             overflow-x: auto;
@@ -143,45 +153,45 @@
     <div class="contenedor-flores">
         
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Rosa Dorada">
-            <h3>Rosa Dorada</h3>
-            <p>Una rosa bañada en oro, símbolo de amor eterno.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Eterna Dorada">
+            <h3>Eterna Dorada</h3>
+            <p>La flor dorada que desafía el tiempo, símbolo de un amor que nunca se desvanece. Esta eterna belleza es la representación de la luz infinita que irradia de un alma pura.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Rosa Azul">
-            <h3>Rosa Azul</h3>
-            <p>Representa lo imposible, la magia y el misterio del amor.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Eterna Azul">
+            <h3>Eterna Azul</h3>
+            <p>El color del cielo infinito, una flor que encierra la calma del océano y la serenidad del firmamento. Su existencia se entrelaza con las estrellas, y su fragancia calma el alma.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Rosa Cristal">
-            <h3>Rosa Cristal</h3>
-            <p>Una joya transparente, pura como tus sentimientos.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Cristal">
+            <h3>Eterna Cristal</h3>
+            <p>Una joya de transparencia pura, como el cristal que refleja la esencia misma de la eternidad. Cada pétalo es un suspiro que resuena en los corazones de aquellos que creen en la inmortalidad.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Rosa Negra">
-            <h3>Rosa Negra</h3>
-            <p>Fuerza, elegancia y pasión profunda.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Eterna Negra">
+            <h3>Eterna Negra</h3>
+            <p>Oscura y misteriosa, esta flor simboliza la elegancia profunda y el amor que trasciende las sombras. Su presencia irradia una fuerza oscura que da luz en medio de la penumbra.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Rosa Roja">
-            <h3>Rosa Roja</h3>
-            <p>El clásico eterno, amor y pasión que perduran.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Rosa%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Eterna Roja">
+            <h3>Eterna Roja</h3>
+            <p>La flor que representa la pasión más intensa, el amor que nunca arde y siempre arde. Su color refleja los sentimientos más profundos, aquellos que viven eternamente en nuestros corazones.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
         <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="ÉterFlor">
-            <h3>ÉterFlor</h3>
+            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="Eterna ÉterFlor">
+            <h3>Eterna ÉterFlor</h3>
             <p>Una flor nacida del éter, inmortal y pura, que refleja la belleza de un amor más allá de la vida misma. Su esencia florece en el alma y su fragancia trasciende el tiempo, creando un vínculo eterno entre los seres que la contemplan.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20ÉterFlor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20ÉterFlor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
 
     </div>
