--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
             <p>El color del cielo infinito, una flor que encierra la calma del océano y la serenidad del firmamento. Su existencia se entrelaza con las estrellas, y su fragancia calma el alma.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
+        
+         <div class="flor">
+    <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Amarilla">
+    <h3>Eterna Amarilla</h3>
+    <p>Brilla con la luz del sol eterno, símbolo de esperanza y alegría infinita. Su cálido resplandor y fragancia única llenan el aire de energía positiva, recordándonos que la felicidad nunca se apaga.</p>
+    <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Amarilla%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+</div>
+
 
         <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Cristal">
