--- a/index.html
+++ b/index.html
@@ -288,8 +288,36 @@
             <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
-        <!-- Agrega más libros si deseas duplicando el bloque anterior -->
-    </div>
+          <div class="libro">
+            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+            <h3>Versos del Infinito</h3>
+            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+          <div class="libro">
+            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+            <h3>Versos del Infinito</h3>
+            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+          <div class="libro">
+            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+            <h3>Versos del Infinito</h3>
+            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+          <div class="libro">
+            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+            <h3>Versos del Infinito</h3>
+            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
+          <div class="libro">
+            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+            <h3>Versos del Infinito</h3>
+            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
 </section>
 
 </body>
