--- a/index.html
+++ b/index.html
@@ -206,119 +206,93 @@
 </section>
 
 <style>
-    .libros-eternos {
-        background-color: #fef8f5;
-        padding: 60px 20px;
-        text-align: center;
-    }
+    /* Estilos para la sección de libros eternos */
+.libros-eternos {
+    background-color: #fef8f5;
+    padding: 60px 20px;
+    text-align: center;
+}
 
-    .libros-eternos h2 {
-        font-size: 2.5em;
-        color: #5d3b3b;
-        margin-bottom: 20px;
-    }
+.libros-eternos h2 {
+    font-size: 2.5em;
+    color: #5d3b3b;
+    margin-bottom: 20px;
+}
 
-    .libros-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 30px;
-        margin-top: 30px;
-    }
+.libros-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 30px;
+}
 
-    .libro {
-        background-color: #fff;
-        border: 2px solid #e0c9c0;
-        padding: 20px;
-        width: 250px;
-        border-radius: 20px;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-        transition: transform 0.3s ease;
-    }
+.libro {
+    background-color: #fff;
+    border: 2px solid #e0c9c0;
+    padding: 20px;
+    width: 250px;
+    border-radius: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+    transition: transform 0.3s ease;
+}
 
-    .libro:hover {
-        transform: translateY(-10px);
-    }
+.libro:hover {
+    transform: translateY(-10px);
+}
 
-    .libro img {
-        max-width: 100%;
-        border-radius: 12px;
-    }
+.libro img {
+    max-width: 100%;
+    border-radius: 12px;
+}
 
-    .libro h3 {
-        font-size: 1.2em;
-        color: #503131;
-        margin: 10px 0;
-    }
+.libro h3 {
+    font-size: 1.2em;
+    color: #503131;
+    margin: 10px 0;
+}
 
-    .libro p {
-        font-size: 0.95em;
-        color: #6a4c4c;
-        margin-bottom: 15px;
-    }
+.libro p {
+    font-size: 0.95em;
+    color: #6a4c4c;
+    margin-bottom: 15px;
+}
 
-    .libro a {
-        display: inline-block;
-        padding: 8px 16px;
-        background-color: #d8a68a;
-        color: white;
-        border-radius: 10px;
-        text-decoration: none;
-        font-weight: bold;
-    }
+.libro a {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #d8a68a;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+}
 
-    .libro a:hover {
-        background-color: #bf886f;
-    }
+.libro a:hover {
+    background-color: #bf886f;
+}
+
 </style>
 
 <!-- Sección de LIBROS ETERNOS -->
-<section class="libros-eternos">
-    <h2>Libros Eternos 📚</h2>
-    <div class="libros-container">
-        <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/05/08/adult-1867665_1280.jpg" alt="Libro 1">
-            <h3>Amor que Trasciende</h3>
-            <p>Una historia de amor inmortal escrita con tinta de eternidad. Perfecto para regalar con una flor eterna.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Amor%20que%20Trasciende%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+    <section class="libros-eternos">
+        <h2>Libros Eternos 📚</h2>
+        <div class="libros-container">
+            <div class="libro">
+                <img src="https://cdn.pixabay.com/photo/2016/11/29/05/08/adult-1867665_1280.jpg" alt="Libro 1">
+                <h3>Amor que Trasciende</h3>
+                <p>Una historia de amor inmortal escrita con tinta de eternidad. Perfecto para regalar con una flor eterna.</p>
+                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Amor%20que%20Trasciende%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            </div>
+            <div class="libro">
+                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
+                <h3>Versos del Infinito</h3>
+                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
+                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+            </div>
+            <!-- Repite el bloque de .libro si tienes más libros -->
         </div>
-        <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-          <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-          <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-          <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-          <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-          <div class="libro">
-            <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-            <h3>Versos del Infinito</h3>
-            <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-</section>
+    </section>
 
 </body>
 </html>    
