--- a/index.html
+++ b/index.html
@@ -135,6 +135,71 @@
             background-color: #555;
         }
 
+        /* Estilos para la sección de libros eternos */
+        .libros-eternos {
+            background-color: #fef8f5;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        .libros-eternos h2 {
+            font-size: 2.5em;
+            color: #5d3b3b;
+            margin-bottom: 20px;
+        }
+
+        .libros-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            margin-top: 30px;
+        }
+
+        .libro {
+            background-color: #fff;
+            border: 2px solid #e0c9c0;
+            padding: 20px;
+            width: 250px;
+            border-radius: 20px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+            transition: transform 0.3s ease;
+        }
+
+        .libro:hover {
+            transform: translateY(-10px);
+        }
+
+        .libro img {
+            max-width: 100%;
+            border-radius: 12px;
+        }
+
+        .libro h3 {
+            font-size: 1.2em;
+            color: #503131;
+            margin: 10px 0;
+        }
+
+        .libro p {
+            font-size: 0.95em;
+            color: #6a4c4c;
+            margin-bottom: 15px;
+        }
+
+        .libro a {
+            display: inline-block;
+            padding: 8px 16px;
+            background-color: #d8a68a;
+            color: white;
+            border-radius: 10px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .libro a:hover {
+            background-color: #bf886f;
+        }
     </style>
 </head>
 <body>
@@ -151,182 +216,52 @@
 <section class="flores-eternas">
     <h2>Flores Eternas</h2>
     <div class="contenedor-flores">
-        
         <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2016/11/29/09/15/rose-1867364_1280.jpg" alt="Eterna Dorada">
             <h3>Eterna Dorada</h3>
             <p>La flor dorada que desafía el tiempo, símbolo de un amor que nunca se desvanece. Esta eterna belleza es la representación de la luz infinita que irradia de un alma pura.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Dorada%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
-
         <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/rose-2699715_1280.jpg" alt="Eterna Azul">
             <h3>Eterna Azul</h3>
             <p>El color del cielo infinito, una flor que encierra la calma del océano y la serenidad del firmamento. Su existencia se entrelaza con las estrellas, y su fragancia calma el alma.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Azul%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
-        
-         <div class="flor">
-    <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Amarilla">
-    <h3>Eterna Amarilla</h3>
-    <p>Brilla con la luz del sol eterno, símbolo de esperanza y alegría infinita. Su cálido resplandor y fragancia única llenan el aire de energía positiva, recordándonos que la felicidad nunca se apaga.</p>
-    <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Amarilla%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-</div>
-
-
+        <div class="flor">
+            <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Amarilla">
+            <h3>Eterna Amarilla</h3>
+            <p>Brilla con la luz del sol eterno, símbolo de esperanza y alegría infinita. Su cálido resplandor y fragancia única llenan el aire de energía positiva, recordándonos que la felicidad nunca se apaga.</p>
+            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Amarilla%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
+        </div>
         <div class="flor">
             <img src="https://cdn.pixabay.com/photo/2021/02/20/12/24/rose-6031824_1280.jpg" alt="Eterna Cristal">
             <h3>Eterna Cristal</h3>
-            <p>Una joya de transparencia pura, como el cristal que refleja la esencia misma de la eternidad. Cada pétalo es un suspiro que resuena en los corazones de aquellos que creen en la inmortalidad.</p>
+            <p>La flor que refleja toda la belleza del mundo a través de su pureza inmaculada. Su cristalina esencia transmite paz y equilibrio, evocando serenidad incluso en los momentos más turbulentos.</p>
             <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Cristal%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
         </div>
-
-        <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/rose-1867343_1280.jpg" alt="Eterna Negra">
-            <h3>Eterna Negra</h3>
-            <p>Oscura y misteriosa, esta flor simboliza la elegancia profunda y el amor que trasciende las sombras. Su presencia irradia una fuerza oscura que da luz en medio de la penumbra.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Negra%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-
-        <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2018/07/29/20/59/rose-3571691_1280.jpg" alt="Eterna Roja">
-            <h3>Eterna Roja</h3>
-            <p>La flor que representa la pasión más intensa, el amor que nunca arde y siempre arde. Su color refleja los sentimientos más profundos, aquellos que viven eternamente en nuestros corazones.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20Roja%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-
-        <div class="flor">
-            <img src="https://cdn.pixabay.com/photo/2017/06/04/15/33/flower-2370196_1280.jpg" alt="Eterna ÉterFlor">
-            <h3>Eterna ÉterFlor</h3>
-            <p>Una flor nacida del éter, inmortal y pura, que refleja la belleza de un amor más allá de la vida misma. Su esencia florece en el alma y su fragancia trasciende el tiempo, creando un vínculo eterno entre los seres que la contemplan.</p>
-            <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20la%20Eterna%20ÉterFlor%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-        </div>
-
     </div>
 </section>
 
-<style>
-    /* Estilos para la sección de libros eternos */
-.libros-eternos {
-    background-color: #fef8f5;
-    padding: 60px 20px;
-    text-align: center;
-}
-
-.libros-eternos h2 {
-    font-size: 2.5em;
-    color: #5d3b3b;
-    margin-bottom: 20px;
-}
-
-.libros-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 30px;
-}
-
-.libro {
-    background-color: #fff;
-    border: 2px solid #e0c9c0;
-    padding: 20px;
-    width: 250px;
-    border-radius: 20px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
-    transition: transform 0.3s ease;
-}
-
-.libro:hover {
-    transform: translateY(-10px);
-}
-
-.libro img {
-    max-width: 100%;
-    border-radius: 12px;
-}
-
-.libro h3 {
-    font-size: 1.2em;
-    color: #503131;
-    margin: 10px 0;
-}
-
-.libro p {
-    font-size: 0.95em;
-    color: #6a4c4c;
-    margin-bottom: 15px;
-}
-
-.libro a {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #d8a68a;
-    color: white;
-    border-radius: 10px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.libro a:hover {
-    background-color: #bf886f;
-}
-
-</style>
-
-<!-- Sección de LIBROS ETERNOS -->
-    <section class="libros-eternos">
-        <h2>Libros Eternos 📚</h2>
-        <div class="libros-container">
-            <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/11/29/05/08/adult-1867665_1280.jpg" alt="Libro 1">
-                <h3>Amor que Trasciende</h3>
-                <p>Una historia de amor inmortal escrita con tinta de eternidad. Perfecto para regalar con una flor eterna.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Amor%20que%20Trasciende%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-            <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-             <div class="libro">
-                <img src="https://cdn.pixabay.com/photo/2016/01/30/18/02/book-1172464_1280.jpg" alt="Libro 2">
-                <h3>Versos del Infinito</h3>
-                <p>Poesía que toca el alma y permanece viva en el corazón. Letras que florecen en cada página.</p>
-                <a href="https://wa.me/51999999999?text=Hola,%20quiero%20comprar%20el%20libro%20Versos%20del%20Infinito%20de%20ÉterFlor." target="_blank">Pagar por WhatsApp</a>
-            </div>
-    </section>
+<section class="libros-eternos">
+    <h2>Libros Eternos</h2>
+    <div class="libros-container">
+        <!-- Libros aquí -->
+        <div class="libro">
+            <img src="https://via.placeholder.com/200" alt="Portada libro 1">
+            <h3>La Flor del Alma</h3>
+            <p>Un viaje a través del alma humana, explorando los secretos más profundos y las emociones que perduran más allá del tiempo.</p>
+            <a href="#">Comprar</a>
+        </div>
+        <div class="libro">
+            <img src="https://via.placeholder.com/200" alt="Portada libro 2">
+            <h3>El Jardín Secreto</h3>
+            <p>Un relato que mezcla magia y naturaleza, donde el misterio del jardín guarda secretos que transforman vidas.</p>
+            <a href="#">Comprar</a>
+        </div>
+        <!-- Más libros aquí -->
+    </div>
+</section>
 
 </body>
-</html>    
+</html>
